<project xmlns="http://maven.apache.org/POM/4.1.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.1.0 http://maven.apache.org/xsd/maven-4.1.0.xsd">
	<modelVersion>4.1.0</modelVersion>

	<parent/>
	<artifactId>lib-gui-examples</artifactId>
	<packaging>jar</packaging>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<java.version>17</java.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>ch.scaille</groupId>
			<artifactId>lib-utils</artifactId>
		</dependency>
		<dependency>
			<groupId>ch.scaille</groupId>
			<artifactId>lib-gui</artifactId>
		</dependency>
		<dependency>
			<groupId>ch.scaille</groupId>
			<artifactId>lib-gui-validation</artifactId>
		</dependency>

		<dependency>
			<groupId>ch.scaille</groupId>
			<artifactId>gui-pilot-swing</artifactId>
			<scope>test</scope>
		</dependency>

	</dependencies>
</project>
